refactoring filter values

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,23 @@
 <div ng-app="myApp" ng-controller="myCtrl">
 
+
  Search <input ng-model="query">
  <br>
  <br>
   <table style="border: 1px solid black; width: 1300px;">
     <tr>
-      <td>ID</td>
-      <td>Date<td>
-      <td>APN</td>
-      <td>Address</td>
-      <td>City</td>
-      <td>Max Rate</td>
-      <td>Interest Rate</td>
-      <td>Loan Amount</td>
-      <td>Loan Term</td>
-      <td>Appraisal Value</td>     
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('id')">ID</span></td>
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('date')">Date</span><td>
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('apn')">APN</span></td>
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('address')">Address</span></td>
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('city')">City</span></td>
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('max_rate')">Max Rate</span></td>
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('interest_rate')">Interest Rate</span></td>
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('loan_amount')">Loan Amount</span></td>
+      <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('loan_term')">Loan Term</span></td>
+      <td><span style="border-radius: 50px; width: 40px; height: " ng-click="selectSortFunction('appraisal_value')">Appraisal Value</span></td>     
     </tr>
-    <tr ng-repeat="data in table_data | filter: query">
+    <tr ng-repeat="data in table_data | filter: query | orderBy:sortType:sortReverse ">
       <td>{{data.id}}</td>
       <td>{{data.date}}<td>
       <td>{{data.apn}}</td>
