--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,22 @@
  Search <input ng-model="query">
  <br>
  <br>
+<div>
+  Max Rate:
+</div>
+<div>
+  Interest Rate:
+</div>
+<div>
+  Loan Amount
+</div>
+<div>
+  Date:
+</div>
+<div>
+ Reset:
+</div>
+
   <table style="border: 1px solid black; width: 1300px;">
     <tr>
       <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('id')">ID</span></td>
