--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,11 +7,76 @@
 <div>
   Max Rate:
 </div>
+
 <div>
-  Interest Rate:
-</div>
-<div>
-  Loan Amount
+  Loan Amount: <br>
+  Minimum: <br>
+  <div>
+                <select  ng-model="minLoanOption" ng-change="MinLoanChanged()">
+                  <option selected="selected">{{minLoanTerm}}</option>
+                  <option value="10000">$10,000+</option>
+                  <option value="20000">$20,000+</option>
+                  <option value="30000">$30,000+</option>
+                  <option value="50000">$50,000+</option>
+                  <option value="75000">$75,000+</option>
+                  <option value="100000">$100,000+</option>
+                  <option value="125000">$125,000+</opton>
+                  <option value="150000">$150,000+</opton>
+                  <option value="175000">$175,000+</opton>
+                  <option value="200000">$200,000+</opton>
+                  <option value="225000">$225,000+</opton>
+                  <option value="250000">$250,000+</opton>
+                  <option value="300000">$300,000+</opton>
+                  <option value="350000">$350,000+</option>
+                  <option value="400000">$400,000+</option>
+                  <option value="450000">$450,000+</option>
+                  <option value="500000">$500,000+</option>
+                  <option value="600000">$600,000+</option>
+                  <option value="700000">$700,000+</option>
+                  <option value="800000">$800,000+</option>
+                  <option value="1000000">$1M+</option>
+                  <option value="1250000">$1.25M+</option>
+                  <option value="1500000">$1.5M+</option>
+                  <option value="1750000">$1.75M+</option>
+                  <option value="2000000">$2M+</option>
+                  <option value="2500000">$2.5M+</option>
+                  <option value="3000000">$3M+</option>
+                </select>
+
+  </div>
+  Maximum:
+  <div>
+                <select ng-model="maxLoanOption" ng-change="MaxLoanChanged()" >
+                  <option selected="selected">{{maxLoanTerm}}</option>
+                  <option value="10000">$10,000+</option>
+                  <option value="20000">$20,000+</option>
+                  <option value="30000">$30,000+</option>
+                  <option value="50000">$50,000+</option>
+                  <option value="75000">$75,000+</option>
+                  <option value="100000">$100,000+</option>
+                  <option value="125000">$125,000+</opton>
+                  <option value="150000">$150,000+</opton>
+                  <option value="175000">$175,000+</opton>
+                  <option value="200000">$  200,000+</opton>
+                  <option value="225000">$225,000+</opton>
+                  <option value="250000">$250,000+</opton>
+                  <option value="300000">$300,000+</opton>
+                  <option value="350000">$350,000+</option>
+                  <option value="400000">$400,000+</option>
+                  <option value="450000">$450,000+</option>
+                  <option value="500000">$500,000+</option>
+                  <option value="600000">$600,000+</option>
+                  <option value="700000">$700,000+</option>
+                  <option value="800000">$800,000+</option>
+                  <option value="1000000">$1M+</option>
+                  <option value="1250000">$1.25M+</option>
+                  <option value="1500000">$1.5M+</option>
+                  <option value="1750000">$1.75M+</option>
+                  <option value="2000000">$2M+</option>
+                  <option value="2500000">$2.5M+</option>
+                  <option value="3000000">$3M+</option>
+                </select>
+  </div>
 </div>
 <div>
   Date:
@@ -33,7 +98,7 @@
       <td><span style="border-radius: 50px; width: 40px; height: 40px;" ng-click="selectSortFunction('loan_term')">Loan Term</span></td>
       <td><span style="border-radius: 50px; width: 40px; height: " ng-click="selectSortFunction('appraisal_value')">Appraisal Value</span></td>     
     </tr>
-    <tr ng-repeat="data in table_data | filter: query | orderBy:sortType:sortReverse ">
+    <tr ng-repeat="data in table_data | filter: query | orderBy:sortType:sortReverse | loanRange:minLoan:maxLoan">
       <td>{{data.id}}</td>
       <td>{{data.date}}<td>
       <td>{{data.apn}}</td>
