Reset buttom almost done

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,7 +65,7 @@
                   <option value="125000">$125,000+</opton>
                   <option value="150000">$150,000+</opton>
                   <option value="175000">$175,000+</opton>
-                  <option value="200000">$  200,000+</opton>
+                  <option value="200000">$200,000+</opton>
                   <option value="225000">$225,000+</opton>
                   <option value="250000">$250,000+</opton>
                   <option value="300000">$300,000+</opton>
@@ -90,7 +90,7 @@
   Date:
 </div>
 <div>
- Reset:
+ Reset: <button type="button" ng-click="reset()" >Reset</button>
 </div>
 
   <table style="border: 1px solid black; width: 1300px;">
