--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@ pagination .pagination > li > a:focus, .pagination > li > a:hover, .pagination >
 </style>
 
 
-<div ng-app="myApp" ng-controller="myCtrl">
+<div >
  Search <input ng-model="query">
  <br>
  <br>
@@ -123,7 +123,17 @@ pagination .pagination > li > a:focus, .pagination > li > a:hover, .pagination >
   <li style="list-style-type: none; float: left; margin:15px 5px;" ng-repeat="flag in display_flags" >{{flag.term}} <input type="checkbox" ng-model="flag.flag"></li>
 </ul>
 
+<div>
+ <h3>Page Number:</h3>
+       <select class="my_selected" ng-model="pageNumberOption" ng-change="pageNumberChanged()" >
+        <option value="1" selected="selected">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select>
 
+</div>
   <table style="border: 1px solid black; width: 1300px;">
     <tr>
       <td  style="text-align: center;" ng-repeat="flag in display_flags" ng-show="flag.flag" ng-click="selectSortFunction(flag.key)">
