Coding column filtration block

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -177,6 +177,12 @@ $(document).ready(function(){
 </div> <!-- End of Container Div  -->
 <!--  End of Advanced Search Field Block -->
 
+<!-- Table Column Filteration Block -->
+<div class="container">
+</div>
+
+<!--  End of  Table Column Filteration Block -->
+<div>
 <div >
   <ul>
     <li style="list-style-type: none; float: left; margin:15px 5px;" ng-repeat="flag in display_flags" >{{flag.term}} <input type="checkbox" ng-model="flag.flag"></li>
